b=24343 r=karnaze@netscape.com Changes so we properly lay out after changing the font using the pref UI. Block and table code changed to handle eReflowReason_StyleChange