layout/generic/nsViewportFrame.cpp
@@ -561,9 +561,11 @@ ViewportFrame::Reflow(nsIPresContext*          aPresContext,
     aDesiredSize.descent = 0;
   }
 
-  // If this is a resize reflow or the initial reflow, then do a repaint
+  // If this is an initial reflow, resize reflow, or style change reflow
+  // then do a repaint
   if ((eReflowReason_Initial == aReflowState.reason) ||
-      (eReflowReason_Resize == aReflowState.reason)) {
+      (eReflowReason_Resize == aReflowState.reason) ||
+      (eReflowReason_StyleChange == aReflowState.reason)) {
     nsRect  damageRect(0, 0, aDesiredSize.width, aDesiredSize.height);
     Invalidate(aPresContext, damageRect, PR_FALSE);
   }
